test/spec_vectors/memory_copy64/ok/module_92.wat
(module (memory i64 1 1) (func (export "test") (memory.copy (i64.const 36864) (i64.const 65536) (i64.const 0))))