test/spec_vectors/memory_copy64/fail/module_25.wat
(module (memory i64 1 1) (func (export "testfn") (memory.copy (i32.const 10) (f32.const 20) (f32.const 30))))